--- a/client/src/pages/Home/HomeComponents/Desktop/Desktop.scss
+++ b/client/src/pages/Home/HomeComponents/Desktop/Desktop.scss
@@ -1,7 +1,6 @@
 .desktop{
     background-color: #323232;
-    width: 100vw;
-    height: 100vh;
+    margin: 0%;
     &-logo{
         width:13vh;
         &__container{
@@ -13,7 +12,8 @@
     &-content{
         color: white;
         margin-top: 10vh;
-        font-size: 1.75rem;
+        font-size: 1.5rem;
+        margin-bottom: 10vh;
         &__container{
             display: flex;
             flex-direction: column;
@@ -26,6 +26,5 @@
     &-qr{
         width: 40vh;
         height: 40vh;
-        margin-top: 3vh;
     }
 }
