--- a/src/pages/Home/HomeComponents/Desktop/Desktop.scss
+++ b/src/pages/Home/HomeComponents/Desktop/Desktop.scss
@@ -1,6 +1,7 @@
 .desktop{
     background-color: #323232;
     margin: 0%;
+    height: 100%;
     &-logo{
         width:13vh;
         &__container{
