--- a/client/src/Components/Splash/Splash.scss
+++ b/client/src/Components/Splash/Splash.scss
@@ -9,12 +9,38 @@
 }
 .splash{
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
     margin: 0;
+
+    &-button {
+        margin-top: 10vh;
+        width: 70%;
+        display: flex;
+        border-radius: 5px;
+        justify-content: center;
+        background-color: #108c1a;
+        border: none;
+        margin-right: 5vw;
+        color: white;
+        font-size: 16px;
+        padding: 12px 24px;
+        cursor: pointer;
+        outline: none;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+      
+        &:active {
+          transform: translateY(2px);
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08);
+        }
+      
+        &:hover {
+          background-color: #094713;
+        }
+      }
 }
 .animation-wrapper{
     margin-bottom: 20vh;
@@ -22,6 +48,7 @@
     align-items: center;
     justify-content: center;
 }
+
 .img{
     width:100px;
     height:100px;
