--- a/client/src/Components/Splash/Splash.scss
+++ b/client/src/Components/Splash/Splash.scss
@@ -7,24 +7,48 @@
   height: 80vh;
   width: 100vw;
 }
+.container, .container-fluid, .container-xxl, .container-xl, .container-lg, .container-md, .container-sm {
+    --bs-gutter-x: 0; 
+    padding-right:0;
+    margin-right:0;
+  }
 .splash{
+    display: flex;
     height: 100vh;
     width: 100vw;
+    contain: content;
     position: absolute;
+    background-image: url(../../assets/images/splash.png);
     top: 0;
     left: 0;
     z-index: -1;
     margin: 0;
-
+    object-fit: cover;
+    object-position: center;
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7); /* black with 50% opacity */
+      }
+    &-logo{
+        margin-top: 20vh;
+        width:55vw;
+        height: 55vw;
+        z-index: 1000;
+    }
     &-button {
         margin-top: 10vh;
         width: 70%;
+        max-width: 200px;
         display: flex;
         border-radius: 5px;
         justify-content: center;
         background-color: #108c1a;
         border: none;
-        margin-right: 5vw;
         color: white;
         font-size: 16px;
         padding: 12px 24px;
