--- a/client/src/Components/Splash/Splash.scss
+++ b/client/src/Components/Splash/Splash.scss
@@ -51,6 +51,7 @@
         border: none;
         color: white;
         font-size: 16px;
+        margin-top: 50vh;
         padding: 12px 24px;
         cursor: pointer;
         outline: none;
