--- a/client/src/Components/HomeComponents/NeedHelp/NeedHelp.scss
+++ b/client/src/Components/HomeComponents/NeedHelp/NeedHelp.scss
@@ -35,3 +35,38 @@
         width: 75vw;
     }
 }
+.help-section {
+    &__title {
+      color: #2C3A49;
+      padding-top: 10vw;
+      padding-bottom: 3vw;
+      font-size: 2.5rem;
+    }
+  
+    &__image {
+      border-radius: 15px;
+      width: 75vw;
+      margin-bottom: 3vw;
+    }
+  
+    &__list {
+      text-align: left;
+  
+      &--header {
+        margin: 4vh 0 2vh 0;
+      }
+    }
+  
+    &__text {
+      color: #2C3A49;
+      padding: 4vw;
+      font-size: 1.15rem;
+      text-align: center;
+      background-color: white;
+      border-radius: 10px;
+      width: 75vw;
+    }
+  }
+  .good-news{
+    margin-top: 5vh;
+  }
