--- a/client/src/pages/DirectionsMap/DirectionsMap.scss
+++ b/client/src/pages/DirectionsMap/DirectionsMap.scss
@@ -20,3 +20,30 @@
   .direction-box.fadeOut {
     opacity: 0;
   }
+  .arrived-button{
+      position: fixed;
+      bottom: 20px;
+      z-index: 99;
+      width: 70%;
+      max-width: 200px;
+      border-radius: 5px;
+      justify-content: center;
+      background-color: #108c1a;
+      border: none;
+      color: white;
+      font-size: 16px;
+      padding: 12px 24px;
+      cursor: pointer;
+      outline: none;
+      margin-left: 3rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+    
+      &:active {
+        transform: translateY(2px);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08);
+      }
+    
+      &:hover {
+        background-color: #094713;
+      }
+    }
