Refactored Deliveries to HomeDeliveries for conciseness

--- a/client/src/pages/HomeDeliveries/HomeDeliveries.scss
+++ b/client/src/pages/HomeDeliveries/HomeDeliveries.scss
@@ -1,6 +1,6 @@
 .deliveries{
     &__container{
-        background-image: url(../../../../assets/images/deliver-bar.png);
+        background-image: url(../../assets/images/deliver-bar.png);
         position: fixed;
         bottom: 0;
         width: 100vw;
